@@ -1,4 +1,7 @@
 2009-05-05 Suzana Matos <suzana.mato@gmail.com>
+* Fixed table width
+
+2009-05-05 Suzana Matos <suzana.mato@gmail.com>
 * Tranlated months' names 
 
 2009-05-05 Iuri Fernandes <iurifq@gmail.com>
